# ought

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  justfile  launch-todos.md  ought.toml  pyproject.toml  todo.md
crates/ought-agent/: Cargo.toml
crates/ought-agent/src/: lib.rs
crates/ought-analysis/: Cargo.toml  README.md
crates/ought-analysis/src/: audit.rs  bisect.rs  blame.rs  survey.rs  types.rs
crates/ought-analysis/tests/: generated_tests.rs
crates/ought-cli/: Cargo.toml  README.md
crates/ought-cli/src/: config.rs  lib.rs  main.rs  viewer.rs
crates/ought-cli/src/commands/: auth.rs  extract.rs  generate.rs  init.rs  mcp.rs  mod.rs
crates/ought-cli/tests/: generated_tests.rs  generated_toplevel_tests.rs
crates/ought-core/: Cargo.toml  README.md
crates/ought-core/src/: context.rs  lib.rs
crates/ought-gen/: Cargo.toml  README.md  grammar.md
crates/ought-gen/src/: agent.rs  auth.rs  config.rs  context.rs  extract.rs  extract_orchestrator.rs  extract_tool_set.rs  extract_tools.rs  generator.rs  lib.rs  orchestrator.rs  tool_set.rs  tools.rs
crates/ought-gen/src/providers/: claude.rs  mod.rs
crates/ought-gen/tests/: generated_tests.rs
crates/ought-llm/: Cargo.toml
crates/ought-llm/src/: error.rs  lib.rs  types.rs
crates/ought-llm/src/providers/: anthropic.rs  mod.rs  openai.rs
crates/ought-mcp/: Cargo.toml  README.md
crates/ought-mcp/src/: config.rs  gen_tools.rs  lib.rs  resources.rs  server.rs  tools.rs
crates/ought-mcp/tests/: generated_tests.rs
crates/ought-report/: Cargo.toml  README.md
crates/ought-report/src/: json.rs  junit.rs  lib.rs  terminal.rs  types.rs
crates/ought-report/tests/: generated_tests.rs
crates/ought-run/: Cargo.toml  README.md
crates/ought-run/src/: cli_runner.rs  config.rs  lib.rs  presets.rs  runner.rs
crates/ought-run/src/formats/: cargo_test.rs  json.rs  junit.rs  mod.rs  tap.rs
crates/ought-run/src/runners/: go.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/ought-run/tests/: generated_tests.rs
crates/ought-server/: Cargo.toml  README.md
crates/ought-server/src/: api.rs  html.rs  lib.rs  proofs.rs  search.rs  server.rs
crates/ought-server/ui/: index.html  package-lock.json  package.json
crates/ought-server/ui/src/: App.svelte
crates/ought-spec/: Cargo.toml  README.md
crates/ought-spec/src/: config.rs  graph.rs  lib.rs  parser.rs  types.rs
crates/ought-spec/src/parser/: clauses.rs  ids.rs  keywords.rs  metadata.rs  mod.rs  state.rs
crates/ought-spec/tests/: parser_test.rs  smoke_test.rs
ought/ought-gen/: Cargo.toml
ought/ought-gen/analysis/audit/: may_assign_a_confidence_score_to_each_finding_test.rs  must_categorize_findings_as_contradiction_gap_ambiguity_or_redund_test.rs  must_detect_must_always_invariant_conflicts_e_g_two_invariants_th_test.rs  must_detect_must_by_deadline_conflicts_e_g_an_operation_with_a_10_test.rs  must_read_all_spec_files_and_their_cross_references_test.rs  must_reference_the_specific_clauses_involved_in_each_finding_file_test.rs  must_use_the_llm_to_identify_contradictions_between_clauses_acros_test.rs  must_use_the_llm_to_identify_gaps_areas_where_related_clauses_exi_test.rs  should_detect_given_blocks_with_overlapping_conditions_that_impose_test.rs  should_detect_must_obligations_that_lack_otherwise_fallbacks_where_test.rs  should_read_relevant_source_code_to_ground_the_analysis_in_implemen_test.rs  should_suggest_resolutions_for_each_finding_test.rs
ought/ought-gen/analysis/bisect/: must_accept_a_clause_identifier_test.rs  must_always_restore_the_working_tree_to_its_original_state_after_complet_test.rs  must_perform_a_git_bisect_style_binary_search_checkout_commit_gen_test.rs  must_report_the_first_commit_where_the_clause_fails_test.rs  must_restore_the_working_tree_to_the_original_branch_test.rs  must_show_the_commit_message_author_date_and_diff_summary_for_the_test.rs  should_cache_test_results_per_commit_to_avoid_redundant_runs_test.rs  should_save_progress_so_ought_bisect_continue_can_resume_test.rs  should_support_range_from_to_to_limit_the_search_space_test.rs  should_use_the_generated_test_from_the_current_manifest_not_regener_test.rs
ought/ought-gen/analysis/blame/: must_accept_a_clause_identifier_e_g_auth_login_must_return_401_test.rs  must_not_require_a_running_llm_if_the_clause_has_never_passed_just_re_test.rs  must_output_a_narrative_explanation_of_what_broke_and_why_test.rs  must_output_the_timeline_last_passing_run_first_failure_relevant_test.rs  must_retrieve_the_clause_its_generated_test_and_the_failure_outpu_test.rs  must_use_git_history_to_find_when_the_clause_last_passed_and_what_test.rs  must_use_the_llm_to_correlate_the_source_diff_with_the_failure_an_test.rs  should_identify_the_specific_commit_and_file_change_most_likely_res_test.rs  should_name_the_author_of_the_likely_responsible_commit_test.rs  should_suggest_a_fix_when_the_cause_is_clear_test.rs
ought/ought-gen/analysis/survey/: must_output_a_list_of_uncovered_behaviors_with_file_and_line_refe_test.rs  must_read_all_existing_spec_files_to_know_what_is_already_covered_test.rs  must_read_source_files_from_the_given_path_or_project_source_root_test.rs  must_suggest_concrete_clause_text_with_appropriate_keyword_for_ea_test.rs  must_use_the_llm_to_identify_public_behaviors_apis_and_logic_bran_test.rs  should_group_suggestions_by_the_spec_file_they_would_belong_to_test.rs  should_offer_to_append_suggested_clauses_to_the_relevant_spec_file_test.rs  should_rank_uncovered_behaviors_by_risk_public_api_internal_helper_test.rs  wont_auto_add_clauses_without_user_confirmation_test.rs
ought/ought-gen/cli/check/: must_exit_with_code_0_if_all_specs_are_valid_1_if_any_are_invalid_test.rs  must_report_parse_errors_with_file_line_number_and_a_human_readab_test.rs  must_validate_that_cross_file_references_links_to_other_ought_md_test.rs  must_validate_the_syntax_of_all_spec_files_without_generating_or_test.rs
ought/ought-gen/cli/diff/: must_show_the_diff_between_current_generated_tests_and_what_would_test.rs  (+2 more)
ought/ought-gen/src/: helpers.rs  lib.rs
(+150 files in other folders)
