[workspace]
resolver = "2"
members = [
    "crates/ought-spec",
    "crates/ought-gen",
    "crates/ought-run",
    "crates/ought-report",
    "crates/ought-analysis",
    "crates/ought-mcp",
    "crates/ought-server",
    "crates/ought-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cairnos-ai/ought"
homepage = "https://github.com/cairnos-ai/ought"
keywords = ["testing", "specs", "llm", "behavioral", "deontic"]
categories = ["development-tools::testing"]

[workspace.dependencies]
ought-spec = { path = "crates/ought-spec", version = "0.1.0" }
ought-gen = { path = "crates/ought-gen", version = "0.1.0" }
ought-run = { path = "crates/ought-run", version = "0.1.0" }
ought-report = { path = "crates/ought-report", version = "0.1.0" }
ought-analysis = { path = "crates/ought-analysis", version = "0.1.0" }
ought-mcp = { path = "crates/ought-mcp", version = "0.1.0" }
ought-server = { path = "crates/ought-server", version = "0.1.0" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.13"
axum = "0.8"
serde_json = "1"
