[workspace]
resolver = "2"
members = [
    "crates/ought-core",
    "crates/ought-spec",
    "crates/ought-gen",
    "crates/ought-run",
    "crates/ought-report",
    "crates/ought-analysis",
    "crates/ought-mcp",
    "crates/ought-server",
    "crates/ought-cli",
    "ought/ought-gen",
]

[workspace.package]
version = "0.2.0-rc3"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/soseinai/ought"
homepage = "https://sosein.ai/products/ought"
keywords = ["testing", "specs", "llm", "behavioral", "deontic"]
categories = ["development-tools::testing"]

[workspace.dependencies]
ought-core = { path = "crates/ought-core", version = "0.2.0-rc3" }
ought-spec = { path = "crates/ought-spec", version = "0.2.0-rc3" }
ought-gen = { path = "crates/ought-gen", version = "0.2.0-rc3" }
ought-run = { path = "crates/ought-run", version = "0.2.0-rc3" }
ought-report = { path = "crates/ought-report", version = "0.2.0-rc3" }
ought-analysis = { path = "crates/ought-analysis", version = "0.2.0-rc3" }
ought-mcp = { path = "crates/ought-mcp", version = "0.2.0-rc3" }
ought-server = { path = "crates/ought-server", version = "0.2.0-rc3" }
# The CLI package is named `ought` (binary + thin library for its `Config`).
ought = { path = "crates/ought-cli", version = "0.2.0-rc3" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.13"
axum = "0.8"
serde_json = "1"
rust-embed = "8"
mime_guess = "2"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
