[workspace]
resolver = "2"
members = [
    "crates/ought-core",
    "crates/ought-spec",
    "crates/ought-gen",
    "crates/ought-run",
    "crates/ought-report",
    "crates/ought-analysis",
    "crates/ought-mcp",
    "crates/ought-server",
    "crates/ought-cli",
    "ought/ought-gen",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/soseinai/ought"
homepage = "https://sosein.ai/products/ought"
keywords = ["testing", "specs", "llm", "behavioral", "deontic"]
categories = ["development-tools::testing"]

[workspace.dependencies]
ought-core = { path = "crates/ought-core", version = "0.2.0" }
ought-spec = { path = "crates/ought-spec", version = "0.2.0" }
ought-gen = { path = "crates/ought-gen", version = "0.2.0" }
ought-run = { path = "crates/ought-run", version = "0.2.0" }
ought-report = { path = "crates/ought-report", version = "0.2.0" }
ought-analysis = { path = "crates/ought-analysis", version = "0.2.0" }
ought-mcp = { path = "crates/ought-mcp", version = "0.2.0" }
ought-server = { path = "crates/ought-server", version = "0.2.0" }
# The CLI package is named `ought` (binary + thin library for its `Config`).
ought = { path = "crates/ought-cli", version = "0.2.0" }

# Sibling open-harness repo — the LLM + agent framework ought-gen builds on.
# Path-only until open-harness is published; pin cuts across ought's workspace.
oharness-core = { path = "../open-harness/crates/oharness-core" }
oharness-llm = { path = "../open-harness/crates/oharness-llm" }
oharness-providers = { path = "../open-harness/crates/oharness-providers", default-features = false, features = ["anthropic", "openai", "openai-codex", "openrouter", "ollama"] }
oharness-tools = { path = "../open-harness/crates/oharness-tools", default-features = false }
oharness-loop = { path = "../open-harness/crates/oharness-loop", default-features = false, features = ["react"] }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.13"
axum = "0.8"
serde_json = "1"
rust-embed = "8"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
async-trait = "0.1"
futures = "0.3"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
