[package]
name = "ought-analysis"
description = "LLM-powered analysis: survey, audit, blame, bisect"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ought-spec.workspace = true
ought-gen.workspace = true
ought-run.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
chrono.workspace = true
