[package]
name = "ought"
description = "CLI for the ought behavioral test framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "ought_cli"
path = "src/lib.rs"

[[bin]]
name = "ought"
path = "src/main.rs"

[dependencies]
ought-core.workspace = true
ought-spec.workspace = true
ought-gen.workspace = true
ought-run.workspace = true
ought-report.workspace = true
ought-analysis.workspace = true
ought-mcp.workspace = true
ought-server.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
notify = "7"
tokio.workspace = true
serde.workspace = true
toml.workspace = true

[lints]
workspace = true
