[package]
name = "ought-gen"
description = "LLM-powered test generation for ought specs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ought-spec.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = "1"
toml.workspace = true
chrono.workspace = true
tempfile = "3"
