[package]
name = "ought-mcp"
description = "MCP server for ought"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ought-spec.workspace = true
ought-gen.workspace = true
ought-run.workspace = true
ought-analysis.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1"
tokio.workspace = true
chrono = { workspace = true }
