[package]
name = "ought-report"
description = "Terminal, JSON, and JUnit reporting for ought"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ought-spec.workspace = true
ought-gen.workspace = true
ought-run.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1"
