[package]
name = "ought-run"
description = "Test runner and result collection for ought"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ought-spec.workspace = true
ought-gen.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
quick-xml = "0.37"
shlex = "1"
tempfile = "3"

[dev-dependencies]
toml.workspace = true

[lints]
workspace = true
