[package]
name = "ought-server"
description = "Web viewer and HTTP server for ought specs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ought-spec.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde_json.workspace = true
