[package]
name = "ought-server"
description = "Web viewer and HTTP server for ought specs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
# The Vite-built UI in `dist/` is gitignored (it's a build artifact), but
# `rust-embed` reads it at compile time. Use `include` (allowlist mode) to
# explicitly ship `dist/` in the published .crate so consumers can compile
# without needing Node.js.
include = [
    "src/**/*",
    "dist/**/*",
    "Cargo.toml",
]

[dependencies]
ought-spec.workspace = true
ought-run.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true

[lints]
workspace = true
