[package]
name = "ought-spec"
description = "Parser and clause IR for the .ought.md spec format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
pulldown-cmark.workspace = true
toml.workspace = true
